force-app/main/default/objects/Training_Program_Feedback__c/Training_Program_Feedback__c.object-meta.xml
<CustomObject>
    <label>Training Program Feedback</label>
    <nameField>
        <displayFormat>FB-{00000000}</displayFormat>
        <label>Training Program Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Programs Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>