force-app/main/default/objects/Training_Program_Feedback__c/fields/Ability_to_Positively_Influence_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Positively_Influence_3_mo__c</fullName>
    <label>Ability to Positively Influence (3 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>