force-app/main/default/objects/Training_Program_Feedback__c/fields/Achieved_Objectives_and_Benefits_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Objectives_and_Benefits_3_mo__c</fullName>
    <label>Achieved Objectives and Benefits (3 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>