force-app/main/default/objects/Training_Program_Feedback__c/fields/Actionable_2021_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>Actionable_2021_Enhancements__c</fullName>
    <label>(Actionable) 2021 Enhancements</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>