force-app/main/default/objects/Training_Program_Feedback__c/fields/Activate_Change_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Activate_Change_Leaders__c</fullName>
    <label>Activate Change Leaders</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>