force-app/main/default/objects/Training_Program_Feedback__c/fields/activities_provided_opp_to_practice__c.field-meta.xml
<CustomField>
    <fullName>activities_provided_opp_to_practice__c</fullName>
    <label>activities provided opp to practice</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>