force-app/main/default/objects/Training_Program_Feedback__c/fields/Additional_CM_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Additional_CM_Solutions__c</fullName>
    <label>Additional CM Solutions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>