force-app/main/default/objects/Training_Program_Feedback__c/fields/Additional_Support_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support_3_mo__c</fullName>
    <label>Additional Support (3 mo)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>