force-app/main/default/objects/Training_Program_Feedback__c/fields/ADKAR_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>ADKAR_Inst_Eff__c</fullName>
    <label>ADKAR-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>