force-app/main/default/objects/Training_Program_Feedback__c/fields/Advisory_effectivenes_meeting_objectives__c.field-meta.xml
<CustomField>
    <fullName>Advisory_effectivenes_meeting_objectives__c</fullName>
    <description>Please rate your advisory facilitators effectiveness in meeting the session objectives</description>
    <label>Advisory effectivenes meeting objectives</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>