force-app/main/default/objects/Training_Program_Feedback__c/fields/Advisory_effectiveness_supporting_needs__c.field-meta.xml
<CustomField>
    <fullName>Advisory_effectiveness_supporting_needs__c</fullName>
    <inlineHelpText>Please rate your advisory team’s effectiveness in supporting your needs</inlineHelpText>
    <label>Advisory effectiveness supporting needs</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>