force-app/main/default/objects/Training_Program_Feedback__c/fields/Advocating_to_apply_Methodology_1_yr__c.field-meta.xml
<CustomField>
    <fullName>Advocating_to_apply_Methodology_1_yr__c</fullName>
    <label>Advocating to apply Methodology (1 yr)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>