force-app/main/default/objects/Training_Program_Feedback__c/fields/After_Activities__c.field-meta.xml
<CustomField>
    <fullName>After_Activities__c</fullName>
    <label>After - Activities</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>