force-app/main/default/objects/Training_Program_Feedback__c/fields/After_materials_workbook_placemat__c.field-meta.xml
<CustomField>
    <fullName>After_materials_workbook_placemat__c</fullName>
    <label>After - materials (workbook &amp; placemat)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>