force-app/main/default/objects/Training_Program_Feedback__c/fields/Analysis_of_CM_models_Ability__c.field-meta.xml
<CustomField>
    <fullName>Analysis_of_CM_models_Ability__c</fullName>
    <label>Analysis of CM models-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>