force-app/main/default/objects/Training_Program_Feedback__c/fields/Analysis_of_CM_models_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Analysis_of_CM_models_Inst_Eff__c</fullName>
    <label>Analysis of CM models-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>