force-app/main/default/objects/Training_Program_Feedback__c/fields/Analyze_ADKAR_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Analyze_ADKAR_Assessments__c</fullName>
    <label>Analyze ADKAR Assessments</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>