force-app/main/default/objects/Training_Program_Feedback__c/fields/Analyze_and_Act_on_PCT_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Analyze_and_Act_on_PCT_Assessment__c</fullName>
    <label>Analyze and Act on PCT Assessment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>