force-app/main/default/objects/Training_Program_Feedback__c/fields/Assessment_Ability__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Ability__c</fullName>
    <label>Assessment-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>