force-app/main/default/objects/Training_Program_Feedback__c/fields/Assessments_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Assessments_Inst_Eff__c</fullName>
    <label>Assessments-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>