force-app/main/default/objects/Training_Program_Feedback__c/fields/Average_Facilitators_Attention__c.field-meta.xml
<CustomField>
    <fullName>Average_Facilitators_Attention__c</fullName>
    <formula>IF ( IsNull( Overall_facilitators_attention__c ), 0, 1)</formula>
    <label>Average Facilitators Attention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>