force-app/main/default/objects/Training_Program_Feedback__c/fields/Build_an_ADKAR_Blueprint__c.field-meta.xml
<CustomField>
    <fullName>Build_an_ADKAR_Blueprint__c</fullName>
    <label>Build an ADKAR Blueprint</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>