force-app/main/default/objects/Training_Program_Feedback__c/fields/Case_study_analysis_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Case_study_analysis_Inst_Eff__c</fullName>
    <label>Case study analysis-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>