force-app/main/default/objects/Training_Program_Feedback__c/fields/CM_Principals_Ability__c.field-meta.xml
<CustomField>
    <fullName>CM_Principals_Ability__c</fullName>
    <label>CM Principals-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>