force-app/main/default/objects/Training_Program_Feedback__c/fields/Coaching_Ability__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Ability__c</fullName>
    <label>Coaching-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>