force-app/main/default/objects/Training_Program_Feedback__c/fields/Coaching_tools_templates__c.field-meta.xml
<CustomField>
    <fullName>Coaching_tools_templates__c</fullName>
    <label>Coaching tools &amp; templates-Inst Eff</label>
    <length>5</length>
    <type>Text</type>
</CustomField>