force-app/main/default/objects/Training_Program_Feedback__c/fields/Communicate_Foster_relationships_VILT__c.field-meta.xml
<CustomField>
    <fullName>Communicate_Foster_relationships_VILT__c</fullName>
    <label>Communicate &amp; Foster relationships VILT</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>