force-app/main/default/objects/Training_Program_Feedback__c/fields/Communications_Ability__c.field-meta.xml
<CustomField>
    <fullName>Communications_Ability__c</fullName>
    <label>Communications-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>