force-app/main/default/objects/Training_Program_Feedback__c/fields/Conduct_a_PCT_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Conduct_a_PCT_Assessment__c</fullName>
    <label>Conduct a PCT Assessment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>