force-app/main/default/objects/Training_Program_Feedback__c/fields/Confident_adapting_Methodology_1_yr__c.field-meta.xml
<CustomField>
    <fullName>Confident_adapting_Methodology_1_yr__c</fullName>
    <label>Confident adapting Methodology (1 yr)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>