force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_activate_roles_changesuccess__c.field-meta.xml
<CustomField>
    <fullName>Confidently_activate_roles_changesuccess__c</fullName>
    <label>Confidently activate roles changesuccess</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>