force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_apply_the_3_Phase_Process__c.field-meta.xml
<CustomField>
    <fullName>Confidently_apply_the_3_Phase_Process__c</fullName>
    <label>Confidently apply the 3-Phase Process</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>