force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_apply_the_Prosci_ADKAR_Model__c.field-meta.xml
<CustomField>
    <fullName>Confidently_apply_the_Prosci_ADKAR_Model__c</fullName>
    <label>Confidently apply the Prosci ADKAR Model</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>