force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_define_Change_Management__c.field-meta.xml
<CustomField>
    <fullName>Confidently_define_Change_Management__c</fullName>
    <label>Confidently define Change Management</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>