force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_explain_the_value_of_CM__c.field-meta.xml
<CustomField>
    <fullName>Confidently_explain_the_value_of_CM__c</fullName>
    <label>Confidently explain the value of CM</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>