force-app/main/default/objects/Training_Program_Feedback__c/fields/Confidently_formulate_the_foundation__c.field-meta.xml
<CustomField>
    <fullName>Confidently_formulate_the_foundation__c</fullName>
    <label>Confidently formulate the foundation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>