force-app/main/default/objects/Training_Program_Feedback__c/fields/Cost_benefit_analysis_for_CM__c.field-meta.xml
<CustomField>
    <fullName>Cost_benefit_analysis_for_CM__c</fullName>
    <label>Cost benefit analysis for CM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>