force-app/main/default/objects/Training_Program_Feedback__c/fields/DAR_Presentation_Elements__c.field-meta.xml
<CustomField>
    <fullName>DAR_Presentation_Elements__c</fullName>
    <label>DAR Presentation Elements</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>