force-app/main/default/objects/Training_Program_Feedback__c/fields/Delivery_team_do_differetnyl__c.field-meta.xml
<CustomField>
    <fullName>Delivery_team_do_differetnyl__c</fullName>
    <label>Delivery team do differently?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>