force-app/main/default/objects/Training_Program_Feedback__c/fields/Digital_workbook_contributed_to_learning__c.field-meta.xml
<CustomField>
    <fullName>Digital_workbook_contributed_to_learning__c</fullName>
    <label>Digital workbook contributed to learning</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>