force-app/main/default/objects/Training_Program_Feedback__c/fields/Effective_2021_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>Effective_2021_Enhancements__c</fullName>
    <label>(Effective) 2021 Enhancements</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>