force-app/main/default/objects/Training_Program_Feedback__c/fields/Effective_apply_PCT_Model__c.field-meta.xml
<CustomField>
    <fullName>Effective_apply_PCT_Model__c</fullName>
    <label>Effective apply PCT Model</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>