force-app/main/default/objects/Training_Program_Feedback__c/fields/Effectively_apply_ADKAR_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Effectively_apply_ADKAR_Assessment__c</fullName>
    <label>Effectively apply ADKAR Assessment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>