force-app/main/default/objects/Training_Program_Feedback__c/fields/Engage_and_Involve_Key_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Engage_and_Involve_Key_Stakeholders__c</fullName>
    <label>Engage and Involve Key Stakeholders</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>