force-app/main/default/objects/Training_Program_Feedback__c/fields/Exceptional_feedback_for_TM__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_feedback_for_TM__c</fullName>
    <label>Exceptional feedback for TM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>