force-app/main/default/objects/Training_Program_Feedback__c/fields/Excercises_and_breakouts__c.field-meta.xml
<CustomField>
    <fullName>Excercises_and_breakouts__c</fullName>
    <label>Excercises and breakouts</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>