force-app/main/default/objects/Training_Program_Feedback__c/fields/Experience_w_VILT_platform_and_tech__c.field-meta.xml
<CustomField>
    <fullName>Experience_w_VILT_platform_and_tech__c</fullName>
    <label>Experience w/VILT platform and tech</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>