force-app/main/default/objects/Training_Program_Feedback__c/fields/Explain_how_CM_contributes_6_mo__c.field-meta.xml
<CustomField>
    <fullName>Explain_how_CM_contributes_6_mo__c</fullName>
    <label>Explain how CM contributes (6 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>