force-app/main/default/objects/Training_Program_Feedback__c/fields/Facilitator_A_do_different_to_improve__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_A_do_different_to_improve__c</fullName>
    <label>Facilitator A - do different to improve</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>