force-app/main/default/objects/Training_Program_Feedback__c/fields/Facilitator_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Improvements__c</fullName>
    <label>Facilitator Improvements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>