force-app/main/default/objects/Training_Program_Feedback__c/fields/Facilities_suitability__c.field-meta.xml
<CustomField>
    <fullName>Facilities_suitability__c</fullName>
    <label>Facilities suitability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>