force-app/main/default/objects/Training_Program_Feedback__c/fields/Final_exam_graduation_Ability__c.field-meta.xml
<CustomField>
    <fullName>Final_exam_graduation_Ability__c</fullName>
    <label>Final exam &amp; graduation-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>