force-app/main/default/objects/Training_Program_Feedback__c/fields/Final_exam_graduation_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Final_exam_graduation_Inst_Eff__c</fullName>
    <label>Final exam &amp; graduation-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>