force-app/main/default/objects/Training_Program_Feedback__c/fields/Gauge_my_learning_identify_areas_for_L__c.field-meta.xml
<CustomField>
    <fullName>Gauge_my_learning_identify_areas_for_L__c</fullName>
    <description>This question changed in a survey update from &quot;Gauge my learning/identify areas for learning&quot; to &quot;The program provided opportunities for me to gauge my understanding of the program content&quot;.  Updated label of field to match new question wording.  MB 1/27/22</description>
    <label>Gauge my understanding</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>