force-app/main/default/objects/Training_Program_Feedback__c/fields/Greatest_Opportunities_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Opportunities_for_Improvement__c</fullName>
    <inlineHelpText>What are the greatest opportunities for improvement based on your experience working with Prosci Advisory Services?</inlineHelpText>
    <label>Greatest Opportunities for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>