force-app/main/default/objects/Training_Program_Feedback__c/fields/Greatest_Strenghts_Identified__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Strenghts_Identified__c</fullName>
    <inlineHelpText>What are the greatest strengths that you have identified in your relationship with Prosci Advisory Services?</inlineHelpText>
    <label>Greatest Strenghts Identified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>