force-app/main/default/objects/Training_Program_Feedback__c/fields/Helping_be_more_successful__c.field-meta.xml
<CustomField>
    <fullName>Helping_be_more_successful__c</fullName>
    <inlineHelpText>How do you see this helping you be more successful?</inlineHelpText>
    <label>Helping be more successful</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>