force-app/main/default/objects/Training_Program_Feedback__c/fields/History_Evolution_of_CM_Ability__c.field-meta.xml
<CustomField>
    <fullName>History_Evolution_of_CM_Ability__c</fullName>
    <label>History &amp; Evolution of CM-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>