force-app/main/default/objects/Training_Program_Feedback__c/fields/How_could_we_improve__c.field-meta.xml
<CustomField>
    <fullName>How_could_we_improve__c</fullName>
    <label>How could we improve?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>