force-app/main/default/objects/Training_Program_Feedback__c/fields/How_to_integrate_CM_and_PM__c.field-meta.xml
<CustomField>
    <fullName>How_to_integrate_CM_and_PM__c</fullName>
    <label>How to integrate CM and PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>