force-app/main/default/objects/Training_Program_Feedback__c/fields/How_would_you_rate_this_program__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_rate_this_program__c</fullName>
    <label>How would you rate this program?</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>