force-app/main/default/objects/Training_Program_Feedback__c/fields/How_would_you_rate_your_instructor_s_abi__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_rate_your_instructor_s_abi__c</fullName>
    <label>Maintain engagement in a virtual environ</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>