force-app/main/default/objects/Training_Program_Feedback__c/fields/Improvements_specific_to_virtual_environ__c.field-meta.xml
<CustomField>
    <fullName>Improvements_specific_to_virtual_environ__c</fullName>
    <label>Improvements specific to virtual environ</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>