force-app/main/default/objects/Training_Program_Feedback__c/fields/Increase_ability_improve_project_health__c.field-meta.xml
<CustomField>
    <fullName>Increase_ability_improve_project_health__c</fullName>
    <label>Increase ability improve project health</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>