force-app/main/default/objects/Training_Program_Feedback__c/fields/Increase_ability_prevent_resistance__c.field-meta.xml
<CustomField>
    <fullName>Increase_ability_prevent_resistance__c</fullName>
    <label>Increase ability prevent resistance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>