force-app/main/default/objects/Training_Program_Feedback__c/fields/Increase_ability_to_resolve_barriers__c.field-meta.xml
<CustomField>
    <fullName>Increase_ability_to_resolve_barriers__c</fullName>
    <label>Increase ability to resolve barriers</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>