force-app/main/default/objects/Training_Program_Feedback__c/fields/Instructor_effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Instructor_effectiveness__c</fullName>
    <label>Instructor effectiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>