force-app/main/default/objects/Training_Program_Feedback__c/fields/Intend_apply_Methodology_6_mo__c.field-meta.xml
<CustomField>
    <fullName>Intend_apply_Methodology_6_mo__c</fullName>
    <label>Intend apply Methodology (6 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>