force-app/main/default/objects/Training_Program_Feedback__c/fields/Leading_Employees_thru_change_Ability__c.field-meta.xml
<CustomField>
    <fullName>Leading_Employees_thru_change_Ability__c</fullName>
    <label>Leading Employees thru change-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>