force-app/main/default/objects/Training_Program_Feedback__c/fields/Leading_Employees_thru_change_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Leading_Employees_thru_change_Inst_Eff__c</fullName>
    <label>Leading Employees thru change-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>