force-app/main/default/objects/Training_Program_Feedback__c/fields/Licensing_and_eToolkit_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Licensing_and_eToolkit_Inst_Eff__c</fullName>
    <label>Licensing and eToolkit-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>