force-app/main/default/objects/Training_Program_Feedback__c/fields/Mgr_Supervisor_Competency_Ability__c.field-meta.xml
<CustomField>
    <fullName>Mgr_Supervisor_Competency_Ability__c</fullName>
    <label>Mgr &amp; Supervisor Competency-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>