force-app/main/default/objects/Training_Program_Feedback__c/fields/Milestone_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Feedback</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Training Programs Feedback</relationshipLabel>
    <relationshipName>Training_Programs_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>