force-app/main/default/objects/Training_Program_Feedback__c/fields/Most_valuable_about_Session__c.field-meta.xml
<CustomField>
    <fullName>Most_valuable_about_Session__c</fullName>
    <inlineHelpText>What was most valuable about the session that Prosci delivered?</inlineHelpText>
    <label>Most valuable about Session</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>