force-app/main/default/objects/Training_Program_Feedback__c/fields/Most_valuable_support_1_yr__c.field-meta.xml
<CustomField>
    <fullName>Most_valuable_support_1_yr__c</fullName>
    <label>Most valuable support (1 yr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>