force-app/main/default/objects/Training_Program_Feedback__c/fields/Our_staff_service_level__c.field-meta.xml
<CustomField>
    <fullName>Our_staff_service_level__c</fullName>
    <label>Our staff service level</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>