force-app/main/default/objects/Training_Program_Feedback__c/fields/Overall_comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_comments__c</fullName>
    <label>Overall comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>