force-app/main/default/objects/Training_Program_Feedback__c/fields/Overall_facilitators_attention__c.field-meta.xml
<CustomField>
    <fullName>Overall_facilitators_attention__c</fullName>
    <label>Overall facilitators effectiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>