force-app/main/default/objects/Training_Program_Feedback__c/fields/Overall_Instructor_attentiveness__c.field-meta.xml
<CustomField>
    <fullName>Overall_Instructor_attentiveness__c</fullName>
    <label>Overall Instructor attentiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>