force-app/main/default/objects/Training_Program_Feedback__c/fields/Overall_Producer_TM_effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Overall_Producer_TM_effectiveness__c</fullName>
    <label>Overall Producer/TM effectiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>