force-app/main/default/objects/Training_Program_Feedback__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <inlineHelpText>This field was retired on 8/31/2020 with the launch of GetFeedback.  Please see your Salesforce Admin if you need the contact name for the individual feedback entry.</inlineHelpText>
    <label>Participant Name</label>
    <type>TextArea</type>
</CustomField>