force-app/main/default/objects/Training_Program_Feedback__c/fields/Phase_1_preparing_for_change_Ability__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_preparing_for_change_Ability__c</fullName>
    <label>Phase 1-preparing for change-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>