force-app/main/default/objects/Training_Program_Feedback__c/fields/Phase_2_Managing_change_evening_Ability__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Managing_change_evening_Ability__c</fullName>
    <label>Phase 2-Managing change evening-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>